@@ -10,6 +10,7 @@ Bug Fixes
 
 * Fix parsing of incomplete AS (issue284, by vmuriart).
 * Fix parsing of Oracle names containing dollars (issue291).
+* Fix parsing of UNION ALL (issue294).
 
 Internal Changes
 
